# rust-atmega2560-cross-compile-nix-blinking-led

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
